welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:9: error: illegal start of simple expression
        setPos(,getMondeHauteur()-1-j,i)
               ^ZigZag:11: error: ')' expected but '}' found.
      }
      ^